<resources>
    <string name="app_name">Tic-Tac-Toe</string>
    <string name="display_text">%1$s, it\'s your turn! Piece: %2$s</string>
    <string name="button1_text" />
    <string name="button2_text" />
    <string name="button3_text" />
    <string name="button4_text" />
    <string name="button5_text" />
    <string name="button6_text" />
    <string name="button7_text" />
    <string name="button8_text" />
    <string name="button9_text" />
    <string name="game_over_text">Game Over!</string>
    <string name="error_toast">Error: You cannot put a piece in that spot!</string>
    <string name="winning_toast">%1$s, you won!</string>
    <string name="tie_text">It was a tie!</string>
    <string name="welcome_to_tic_tac_toe">Tic Tac Toe!</string>
    <string name="please_select_difficulty">Please Select Difficulty:</string>
    <string-array name="spinner_options">
        <item>Human</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string name="player_1">Player 1:</string>
    <string name="player_1_name">Player 1 Name:</string>
    <string name="player_2">Player 2:</string>
    <string name="player_2_name">Player 2 Name:</string>
    <string name="name_text">Enter Name Here</string>
    <string name="name_button_text">Set Name</string>
    <string name="start_game">Start Game</string>
    <string name="tic_tac_toe_logo">Tic-Tac-Toe Logo</string>
    <string name="play_again">Play again</string>
    <string name="game_over_screen">Game Over Screen</string>
    <string name="tie_total_text">Number of Ties: %1$s</string>
    <string name="player_one_win_total_text">Player 1 Wins: %1$s</string>
    <string name="player_two_win_total_text">Player 2 Wins: %1$s</string>


</resources>