<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/base"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:orientation="vertical"
    android:background="#67BCB2"
    tools:ignore="ButtonStyle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:shadowColor="#FFFFFF"
            android:text="@string/welcome_to_tic_tac_toe"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/Difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_select_difficulty"
            android:textAlignment="textStart"
            android:textColor="#F6F5F5"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_1"
            android:textColor="#FDFCFC"
            android:textSize="17sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:spinnerMode="dropdown"
            android:visibility="visible"
            android:entries="@array/spinner_options"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/name_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name_text"
            android:singleLine="true"
            android:textColor="#FFFEFE"
            android:textColorHint="#FDFDFD"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="155dp"
            android:layout_height="75dp"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/tic_tac_toe_logo"
            app:srcCompat="@drawable/ic_launcher_foreground" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/player2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player_2"
            android:textColor="#FDFCFC"
            android:textSize="17sp" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:spinnerMode="dropdown"
            android:visibility="visible"
            android:entries="@array/spinner_options"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/name_text_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_text"
            android:singleLine="true"
            android:textColor="#FFFEFE"
            android:textColorHint="#FDFDFD"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/start_game"
            android:layout_width="172dp"
            android:layout_height="79dp"
            android:layout_gravity="right|top"
            android:layout_marginTop="24dp"
            android:layout_marginRight="20dp"
            android:text="@string/start_game"
            android:onClick="changeScreenView"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</LinearLayout>