<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00B8D4"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button0"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/button1_text"
            android:textSize="34sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button1"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/button2_text"
            android:textSize="34sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button2"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:baselineAligned="false"
            android:text="@string/button3_text"
            android:textSize="34sp"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button3"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/button1_text"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button4"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/button2_text"
            android:textSize="34sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button5"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:baselineAligned="false"
            android:text="@string/button3_text"
            android:textSize="34sp"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button6"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/button1_text"
            android:textSize="34sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button7"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/button2_text"
            android:textSize="34sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button8"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:baselineAligned="false"
            android:text="@string/button3_text"
            android:textSize="34sp"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/display_text_view"
            android:layout_width="395dp"
            android:layout_height="83dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="500dp"
            android:background="#C11A1F"
            android:gravity="center"
            android:padding="24dp"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:text="@string/display_text" />
    </LinearLayout>

</LinearLayout>
